--- a/SPManagementSystem/Views/Categories/Index.cshtml
+++ b/SPManagementSystem/Views/Categories/Index.cshtml
@@ -1,5 +1,14 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<html>
+    <body>
+        <h3>Categories</h3>
+        <br/>
+        <ul>
+            <li>
+                <a href="/categories/edit/1">Berverage</a>
+            </li>
+            <li>
+            <a href="/categories/edit/2">Meat</a>
+            </li>
+        </ul>
+    </body>
+</html>
