--- a/SPManagementSystem/Views/Home/Index.cshtml
+++ b/SPManagementSystem/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<html>
+    <body>
+        <h1>Home page here</h1>
+    </body>
+</html>
