Initial Navbar and section added

--- a/SPManagementSystem/Views/Categories/Edit.cshtml
+++ b/SPManagementSystem/Views/Categories/Edit.cshtml
@@ -1,8 +1,6 @@
 ﻿@using SPManagementSystem.Models
 @model Category
 
-<html>
-<body>
+@section title {
     <h3>Category: @Model.CategoryId</h3>
-</body>
-</html>
+}
