--- a/SPManagementSystem/Views/Categories/Index.cshtml
+++ b/SPManagementSystem/Views/Categories/Index.cshtml
@@ -1,14 +1,12 @@
-﻿<html>
-    <body>
-        <h3>Categories</h3>
-        <br/>
-        <ul>
-            <li>
-                <a href="/categories/edit/1">Berverage</a>
-            </li>
-            <li>
-            <a href="/categories/edit/2">Meat</a>
-            </li>
-        </ul>
-    </body>
-</html>
+﻿@section title {
+    <h3>Categories</h3>
+}
+
+<ul>
+    <li>
+        <a href="/categories/edit/1">Berverage</a>
+    </li>
+    <li>
+    <a href="/categories/edit/2">Meat</a>
+    </li>
+</ul>
