modal binding and loading categories from data stored

--- a/SPManagementSystem/Views/Categories/Index.cshtml
+++ b/SPManagementSystem/Views/Categories/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using SPManagementSystem.Models;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelper
-@model List<Category>
+﻿@model List<Category>
 
 
 @section title {
