add new category with validation

--- a/SPManagementSystem/Views/Categories/Index.cshtml
+++ b/SPManagementSystem/Views/Categories/Index.cshtml
@@ -26,4 +26,9 @@
             }
         </tbody>
     </table>
+    <div class="row mb-3">
+        <div class="col">
+            <a type="button" asp-controller="categories" asp-action="add" class="btn btn-primary">Add</a>
+        </div>
+    </div>
 }
