--- a/SPManagementSystem/Views/Shared/_Layout.cshtml
+++ b/SPManagementSystem/Views/Shared/_Layout.cshtml
@@ -35,5 +35,7 @@
         <div class="container">
             @RenderBody()
         </div>
+
+        @await RenderSectionAsync("Scripts", required: false)
     </body>
 </html>
