Adding products and view model

--- a/SPManagementSystem/Views/Shared/_Layout.cshtml
+++ b/SPManagementSystem/Views/Shared/_Layout.cshtml
@@ -21,7 +21,19 @@
                                 <a class="nav-link tex-dark" asp-controller="home" asp-action="index">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link tex-dark">Sell</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link tex-dark" asp-controller="categories" asp-action="index">Categories</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link tex-dark" asp-controller="products" asp-action="index">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link tex-dark">Transactions</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link tex-dark">Privacy</a>
                             </li>
                         </ul>
                     </div>
