--- a/SPManagementSystem/Views/Products/Edit.cshtml
+++ b/SPManagementSystem/Views/Products/Edit.cshtml
@@ -1,7 +1,13 @@
-﻿@model Product
+﻿@model ProductViewModel
 
 @section title {
-    <h3>Product</h3>
+    @if (Model != null)
+    {
+        <h3>Product: @Model.Product?.Name</h3>
+    }
 }
 
-<partial name="_Product" model="@Model" />
+@if (Model != null)
+{
+    <partial name="_Product" model="@Model" />
+}
