--- a/SPManagementSystem/Views/Products/Index.cshtml
+++ b/SPManagementSystem/Views/Products/Index.cshtml
@@ -28,13 +28,14 @@
                     <td>@product.Price?.ToString("c")</td>
                     <td>@product.Quantity</td>
                     <td><a class="btn btn-link" asp-controller="products" asp-action="edit" asp-route-id="@product.ProductId">Edit</a></td>
-                    <td><a class="btn btn-link" asp-controller="products" asp-action="delete" asp-route-categoryId="@product.ProductId" onclick="return confirmDelete()">Delete</a></td>
+                    <td><a class="btn btn-link" asp-controller="products" asp-action="delete" asp-route-id="@product.ProductId" onclick="return confirmDelete()">Delete</a></td>
                 </tr>
             }
         </tbody>
     </table>
-    <a type="button" asp-controller="products" asp-action="add" class="btn btn-primary">Add</a>
 }
+<br />
+<a type="button" asp-controller="products" asp-action="add" class="btn btn-primary">Add</a>
 
 @section Scripts {
     <script>
