--- a/SPManagementSystem/Views/Products/_Product.cshtml
+++ b/SPManagementSystem/Views/Products/_Product.cshtml
@@ -1,66 +1,72 @@
-﻿@model Product
+﻿@model ProductViewModel
 
 @{
     string action = ViewBag.Action ?? string.Empty;
 }
 
 <form method="post" asp-controller="products" asp-action="@action">
+    
     @if (action?.ToLower() == "edit")
     {
-        <input type="hidden" asp-for="ProductId" />
+        <input type="hidden" asp-for="Product.ProductId" />
     }
 
     <div class="text-danger" asp-validation-summary="All"></div>
+
     <div class="row mb-3">
         <div class="col-2">
-            <label asp-for="CategoryId" class="col-form-label"></label>
+            <label asp-for="Product.CategoryId" class="col-form-label"></label>
         </div>
         <div class="col">
-            <select class="form-select" aria-label="Select Category" asp-for="CategoryId">
-                <option selected value="#">Please Select</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+            <select class="form-control" asp-for="Product.CategoryId">
+                <option selected>Please Select</option>
+                @if (Model.Categories != null && Model.Categories.Count() > 0)
+                {
+                    @foreach (var cat in Model.Categories)
+                    {
+                        <option value="@cat.CategoryId">@cat.Name</option>
+                    }
+                }
             </select>
         </div>
         <div class="col">
-            <span class="text-danger" asp-validation-for="CategoryId"></span>
+            <span class="text-danger" asp-validation-for="Product.CategoryId"></span>
         </div>
     </div>
 
     <div class="row mb-3">
         <div class="col-2">
-            <label asp-for="Name" class="col-form-label"></label>
+            <label asp-for="Product.Name" class="col-form-label"></label>
         </div>
         <div class="col-6">
-            <input type="text" asp-for="Name" class="form-control" />
+            <input type="text" asp-for="Product.Name" class="form-control" />
         </div>
         <div class="col">
-            <span class="text-danger" asp-validation-for="Name"></span>
+            <span class="text-danger" asp-validation-for="Product.Name"></span>
         </div>
     </div>
 
     <div class="row mb-3">
         <div class="col-2">
-            <label asp-for="Price" class="col-form-label"></label>
+            <label asp-for="Product.Price" class="col-form-label"></label>
         </div>
         <div class="col-6">
-            <input type="text" asp-for="Price" class="form-control" />
+            <input type="number" asp-for="Product.Price" class="form-control" step="any" />
         </div>
         <div class="col">
-            <span class="text-danger" asp-validation-for="Price"></span>
+            <span class="text-danger" asp-validation-for="Product.Price"></span>
         </div>
     </div>
 
     <div class="row mb-3">
         <div class="col-2">
-            <label asp-for="Quantity" class="col-form-label"></label>
+            <label asp-for="Product.Quantity" class="col-form-label"></label>
         </div>
         <div class="col-6">
-            <input type="text" asp-for="Quantity" class="form-control" />
+            <input type="number" asp-for="Product.Quantity" class="form-control" min="1" />
         </div>
         <div class="col">
-            <span class="text-danger" asp-validation-for="Quantity"></span>
+            <span class="text-danger" asp-validation-for="Product.Quantity"></span>
         </div>
     </div>
 
