--- a/SPManagementSystem/Views/Sales/Index.cshtml
+++ b/SPManagementSystem/Views/Sales/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-4">
         @*Category selection*@
-        <select class="form-control" asp-for="SelectecCategoryId">
+        <select class="form-control" asp-for="SelectedCategoryId">
             <option>-Please Select-</option>
             @if(Model.Categories !=  null && Model.Categories.Count() > 0)
             {
@@ -26,8 +26,8 @@
         </select>
 
         <br />
-        <div>
-            
+        <div id="productsPartial">
+            @*Product's list*@
         </div>
 
         <br />
@@ -41,3 +41,14 @@
         @*List of transactions*@
     </div>
 </div>
+
+@section Scripts{
+    <script>
+        $(function () {
+            //Handle category selection
+            $("#SelectedCategoryId").on("change", function () {
+                $("#productsPartial").load("/products/ProductByCategoryPartial", { categoryId: $(this).val() });
+            })
+        });
+    </script>
+}
