use css_JQuery for dynamic styling

--- a/SPManagementSystem/Views/Products/_Products.cshtml
+++ b/SPManagementSystem/Views/Products/_Products.cshtml
@@ -12,9 +12,9 @@
         <tbody>
             @foreach(var prod in Model)
             {
-                <tr>
-                    <th>@prod.Name</th>
-                    <th>@prod.Quantity</th>
+                <tr class="product-row">
+                    <td>@prod.Name</td>
+                    <td>@prod.Quantity</td>
                 </tr>
             }
         </tbody>
