--- a/SPManagementSystem/Views/Products/_Products.cshtml
+++ b/SPManagementSystem/Views/Products/_Products.cshtml
@@ -12,7 +12,7 @@
         <tbody>
             @foreach(var prod in Model)
             {
-                <tr class="product-row">
+                <tr class="product-row" product-id="@prod.ProductId">
                     <td>@prod.Name</td>
                     <td>@prod.Quantity</td>
                 </tr>
