validation of quantity in sell screen

--- a/SPManagementSystem/Views/Sales/Index.cshtml
+++ b/SPManagementSystem/Views/Sales/Index.cshtml
@@ -13,6 +13,8 @@
 <br />
 <div class="row">
     <div class="col-4">
+        <div class="text-danger" asp-validation-summary="All"></div>
+
         @*Category selection*@
         <select class="form-control" asp-for="SelectedCategoryId">
             <option>-Please Select-</option>
