--- a/SPManagementSystem/Views/Sales/Index.cshtml
+++ b/SPManagementSystem/Views/Sales/Index.cshtml
@@ -51,6 +51,7 @@
     </div>
     <div class="col">
         @*List of transactions*@
+        @await Component.InvokeAsync("Transactions", "Casheer 1");
     </div>
 </div>
 
