work on transactions report, Create transactions view model to show all transactions.
Implement search option to search by cashier name.

generate report -> Implement print feature to print all transactions shown on the transactions report table.

--- a/SPManagementSystem/Views/Sales/Index.cshtml
+++ b/SPManagementSystem/Views/Sales/Index.cshtml
@@ -2,7 +2,7 @@
 
 @section title{
     <div class="row">
-        <div class="col-7"><h3>Cashier's Console'</h3></div>
+        <div class="col-7"><h3>Cashier's Console</h3></div>
         <div class="col-2"><label for="cashier">Cashier Name:</label></div>
         <div class="col-3">
             <span>Cashier's name here</span>
@@ -51,7 +51,7 @@
     </div>
     <div class="col">
         @*List of transactions*@
-        @await Component.InvokeAsync("Transactions", "Casheer 1");
+        @await Component.InvokeAsync("Transactions", "Cashier1");
     </div>
 </div>
 
