--- a/SPManagementSystem/Views/Shared/_Layout.cshtml
+++ b/SPManagementSystem/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 <a class="nav-link tex-dark" asp-controller="products" asp-action="index">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link tex-dark">Transactions</a>
+                                <a class="nav-link tex-dark" asp-controller="transactions" asp-action="index">Transactions</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link tex-dark">Privacy</a>
