--- a/SPManagementSystem/wwwroot/css/site.css
+++ b/SPManagementSystem/wwwroot/css/site.css
@@ -1,3 +1,19 @@
 ﻿tr.highlight-color > td {
     background-color: lightgreen;
 }
+
+@media print{
+    body{
+        visibility: hidden;
+    }
+
+    #printarea, #printarea * {
+        visibility: visible;
+    }
+
+    #printarea{
+        position:absolute;
+        left:0;
+        top:0;
+    }
+}
