- Dynamically inject the plugging by environment type - Defined environment QA to use the in memory repositories for fast testing - fix product update after transaction - fix transactions report layout

--- a/SPManagementSystem/Views/Shared/Components/Transactions/Default.cshtml
+++ b/SPManagementSystem/Views/Shared/Components/Transactions/Default.cshtml
@@ -6,9 +6,10 @@
             <th>Cashier Name</th>
             <th>Product Name</th>
             <th>Date Time</th>
+            <th>Qty Before</th>
             <th>Qty Sold</th>
             <th>Qty After</th>
-            <th>Qty Amt</th>
+            <th>Sold Amt</th>
         </tr>
     </thead>
     <tbody>
