--- a/SPManagementSystem/Views/Transactions/Index.cshtml
+++ b/SPManagementSystem/Views/Transactions/Index.cshtml
@@ -22,7 +22,6 @@
             <div class="col-2">
                 <label>&nbsp;</label>
                 <button type="submit" class="btn btn-primary form-control" asp-action="Search">Search</button>
-                <input />
             </div>
             <div class="col-2">
                 <label>&nbsp;</label>
@@ -39,6 +38,7 @@
                     <th>Date Time</th>
                     <th>Cashier Name</th>
                     <th>Prodct Name</th>
+                    <th>Qty Before</th>
                     <th>Qty Sold</th>
                     <th>Qty After</th>
                     <th>Price</th>
